--- a/QuestPackages/m64/sslide/package.yml
+++ b/QuestPackages/m64/sslide/package.yml
@@ -6,7 +6,7 @@ variables:
 
 events:
   init_level:         "folder add_level_objs,init_slide,e_tp_spawn,e_play_music"
-  reload_level:       "folder reset_level,m64-main.init_castle"
+  reload_level:       "folder reset_level,core-main.init_castle"
   reset_level:        "folder del_level_objs,reset_slide,e_stop_music"
 
   on_death:           "folder e_notify_death,reload_level,e_point_add_death,e_gpoint_add_death"
@@ -16,8 +16,8 @@ events:
   e_gpoint_add_death: "globalpoint ss1_deaths 1 action:add"
 
   ### Play music
-  e_play_music:       "folder m64-sfx.e_play_secret_slide"
-  e_stop_music:       "folder m64-sfx.e_stop_music"
+  e_play_music:       "folder core-music.e_play_secret_slide"
+  e_stop_music:       "folder core-music.e_stop_music"
 
   ### LEVEL - Add objectives
   add_level_objs:     "folder e_obj_add_respawn,e_obj_add_exit,e_obj_add_exit2"
