--- a/QuestPackages/m64/jrb/cannons.yml
+++ b/QuestPackages/m64/jrb/cannons.yml
@@ -4,7 +4,7 @@ events:
 
   e_give_enderpearl:      "give i_enderpearl:1 notify"
   e_take_enderpearl:      "take i_enderpearl:64"
-  e_ptc_explotion:        "command execute in minecraft:marocraft at %player% run particle minecraft:explosion ~ ~1 ~ 0.5 0 0.5 1 3"
+  e_ptc_explotion:        "command execute in minecraft:overworld at %player% run particle minecraft:explosion ~ ~1 ~ 0.5 0 0.5 1 3"
 
   ### CANNON - 1 - BEACH
   reset_c1:               "folder cleanup_c1,init_c1"
@@ -12,7 +12,7 @@ events:
   init_c1:                "folder e_obj_add_c1_enter"
   e_obj_add_c1_enter:     "objective add o_cannon_enter_1"
   # Enter
-  e_c1_enter:             "folder m64-sfx.e_cannon_ready,e_obj_add_c1_stay"
+  e_c1_enter:             "folder core-sfx.e_cannon_ready,e_obj_add_c1_stay"
   e_obj_add_c1_stay:      "objective add o_cannon_wait_1"
   # Waited
   e_c1_waited:            "if chk_in_cannon_1 e_c1_load else e_obj_add_c1_enter"
@@ -21,7 +21,7 @@ events:
   e_obj_add_c1_shoot:     "objective add o_cannon_shoot_1"
   e_obj_add_c1_exit:      "objective add o_cannon_exit_1"
   # Shoot
-  e_c1_shoot:             "folder m64-sfx.e_cannon_shoot,e_ptc_explotion"
+  e_c1_shoot:             "folder core-sfx.e_cannon_shoot,e_ptc_explotion"
   # Exit
   e_c1_exit:              "folder e_take_enderpearl,reset_c1"
   # Cleanup
