--- a/QuestPackages/m64/lll/package.yml
+++ b/QuestPackages/m64/lll/package.yml
@@ -7,7 +7,7 @@ variables:
 
 events:
   init_level:         "folder add_level_objs,init_stars,e_tp_spawn,e_play_music"
-  reload_level:       "folder reset_level,m64-main.init_castle"
+  reload_level:       "folder reset_level,core-main.init_castle"
   reset_level:        "folder del_level_objs,reset_stars,e_stop_music"
   hard_reset:         "folder reset_level,delete_stars"
   on_death:           "folder e_notify_death,reload_level,e_point_add_death,e_gpoint_add_death"
@@ -17,8 +17,8 @@ events:
   e_gpoint_add_death: "globalpoint lll_deaths 1 action:add"
 
   ### Play music
-  e_play_music:       "folder m64-sfx.e_play_ssl"
-  e_stop_music:       "folder m64-sfx.e_stop_music"
+  e_play_music:       "folder core-music.e_play_ssl"
+  e_stop_music:       "folder core-music.e_stop_music"
 
 
   ### LEVEL - Add objectives
