--- a/QuestPackages/m64/lll/stars.yml
+++ b/QuestPackages/m64/lll/stars.yml
@@ -1,12 +1,12 @@
 variables:
   s1:
     star_loc:             -874;46;-541;marocraft
-    npc_bb:               161
+    npc_bb:               7
   s2:
     star_loc:             -829;41;-526;marocraft
-    npc_sb_1:             162
-    npc_sb_2:             163
-    npc_sb_3:             164
+    npc_sb_1:             8
+    npc_sb_2:             9
+    npc_sb_3:             10
   s4:
     star_loc:             -917;40;-468;marocraft
     star_loc_xyz:         -917 40 -468
@@ -53,9 +53,9 @@ variables:
 
 
 npcs:
-  '165': "cpttoad_1"
-  '166': "cpttoad_2"
-  '167': "cpttoad_3"
+  '11': "cpttoad_1"
+  '12': "cpttoad_2"
+  '13': "cpttoad_3"
 
 conversations:
   cpttoad_1:
@@ -112,7 +112,7 @@ events:
   e_del_star_tags_2:      "run ^tag delete s8 ^tag delete s9 ^tag delete s10 ^tag delete s11"
   e_clear_star_counter:   "point lll_stars 0 action:set"
 
-  exit_star:              "folder on_exit,m64-sfx.e_exit_course,e_add_star_counter delay:4"
+  exit_star:              "folder on_exit,core-sfx.e_exit_course,e_add_star_counter delay:4"
   e_add_star_counter:     "point lll_stars 1 action:add"
 
 
@@ -122,7 +122,7 @@ events:
   e_obj_add_s1_kbb:       "objective add o_s1_kill_bb"
 
   # Killed big bully
-  e_s1_bb_killed:         "folder e_s1_spawn_star,m64-sfx.e_star_spawn,e_s1_notif_spawn_star,e_obj_add_s1_star,e_s1_gp_add_star,e_s1_tag_add_spawned,e_s1_pardon_player"
+  e_s1_bb_killed:         "folder e_s1_spawn_star,core-sfx.e_star_spawn,e_s1_notif_spawn_star,e_obj_add_s1_star,e_s1_gp_add_star,e_s1_tag_add_spawned,e_s1_pardon_player"
   e_s1_spawn_star:        "setblock RAW_GOLD_BLOCK $s1.star_loc$"
   e_s1_notif_spawn_star:  "notify &3A star has spawned! io:title"
   e_obj_add_s1_star:      "objective add o_s1_star"
@@ -131,11 +131,11 @@ events:
   e_s1_pardon_player:     "command lp user %player% parent add bb_whitelist"
 
   # Win
-  win_s1:                 "folder e_notif_s1_win,m64-sfx.e_got_star,if_firstwin_s1,cleanup_s1"
+  win_s1:                 "folder e_notif_s1_win,core-sfx.e_got_star,if_firstwin_s1,cleanup_s1"
   e_notif_s1_win:         "notify &3Bully the big bully\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s1:         "if !chk_s1_obtained firstwin_s1 else m64-main.e_dummy"
+  if_firstwin_s1:         "if !chk_s1_obtained firstwin_s1 else core-main.e_dummy"
   firstwin_s1:            "folder e_broad_s1_first,tag_add_s1_win,e_stop_music,exit_star"
   e_broad_s1_first:       "command broadcast &6%player% &2got a star: [LLL] Bully the big bully"
   tag_add_s1_win:         "tag add s1"
@@ -145,13 +145,13 @@ events:
   e_obj_del_s1_star:      "objective remove o_s1_star"
   e_obj_del_s1_kbb:       "objective remove o_s1_kill_bb"
 
-  if_s1_spawned:          "if chk_s1_spawned e_s1_del_spawned else m64-main.e_dummy"
+  if_s1_spawned:          "if chk_s1_spawned e_s1_del_spawned else core-main.e_dummy"
   e_s1_del_spawned:       "folder e_s1_gp_sub_star,if_s1_despawn"
   e_s1_gp_sub_star:       "globalpoint lll_s1 1 action:subtract"
-  if_s1_despawn:          "if !chk_s1_spawn_count e_s1_delete_star else m64-main.e_dummy"
+  if_s1_despawn:          "if !chk_s1_spawn_count e_s1_delete_star else core-main.e_dummy"
   e_s1_tag_del_spawned:   "tag delete s1_spawned"
 
-  if_s1_gotten:           "if !chk_s1_obtained e_s1_attack_player else m64-main.e_dummy"
+  if_s1_gotten:           "if !chk_s1_obtained e_s1_attack_player else core-main.e_dummy"
   e_s1_attack_player:     "command lp user %player% parent remove bb_whitelist"
 
   e_s1_delete_star:       "folder e_s1_despawn_star,e_s1_reset_star_count"
@@ -166,19 +166,19 @@ events:
   e_obj_add_s2_ksb_3:     "objective add o_s2_kill_sb_3"
 
   # Killed small bully 1
-  e_s2_sb_killed_1:       "folder e_s2_tag_add_sb_1,m64-sfx.e_coin,if_all_bullies_s2"
+  e_s2_sb_killed_1:       "folder e_s2_tag_add_sb_1,core-sfx.e_coin,if_all_bullies_s2"
   e_s2_tag_add_sb_1:      "tag add s2_sb_1"
   # Killed small bully 2
-  e_s2_sb_killed_2:       "folder e_s2_tag_add_sb_2,m64-sfx.e_coin,if_all_bullies_s2"
+  e_s2_sb_killed_2:       "folder e_s2_tag_add_sb_2,core-sfx.e_coin,if_all_bullies_s2"
   e_s2_tag_add_sb_2:      "tag add s2_sb_2"
   # Killed small bully 3
-  e_s2_sb_killed_3:       "folder e_s2_tag_add_sb_3,m64-sfx.e_coin,if_all_bullies_s2"
+  e_s2_sb_killed_3:       "folder e_s2_tag_add_sb_3,core-sfx.e_coin,if_all_bullies_s2"
   e_s2_tag_add_sb_3:      "tag add s2_sb_3"
 
   # Check if all bullies killed
-  if_all_bullies_s2:      "if chk_s2_killed_sb_all e_s2_all_sb_killed else m64-main.e_dummy"
+  if_all_bullies_s2:      "if chk_s2_killed_sb_all e_s2_all_sb_killed else core-main.e_dummy"
   # All bullies killed
-  e_s2_all_sb_killed:     "folder e_s2_spawn_star,m64-sfx.e_star_spawn,e_s2_notif_spawn_star,e_obj_add_s2_star,e_s2_gp_add_star,e_s2_tag_add_spawned,e_s2_pardon_player"
+  e_s2_all_sb_killed:     "folder e_s2_spawn_star,core-sfx.e_star_spawn,e_s2_notif_spawn_star,e_obj_add_s2_star,e_s2_gp_add_star,e_s2_tag_add_spawned,e_s2_pardon_player"
   e_s2_spawn_star:        "setblock RAW_GOLD_BLOCK $s2.star_loc$"
   e_s2_notif_spawn_star:  "notify &3A star has spawned! io:title"
   e_obj_add_s2_star:      "objective add o_s2_star"
@@ -187,11 +187,11 @@ events:
   e_s2_pardon_player:     "command lp user %player% parent add sb_whitelist"
 
   # Win
-  win_s2:                 "folder e_notif_s2_win,m64-sfx.e_got_star,if_firstwin_s2,cleanup_s2"
+  win_s2:                 "folder e_notif_s2_win,core-sfx.e_got_star,if_firstwin_s2,cleanup_s2"
   e_notif_s2_win:         "notify &3Bully the bullies\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s2:         "if !chk_s2_obtained firstwin_s2 else m64-main.e_dummy"
+  if_firstwin_s2:         "if !chk_s2_obtained firstwin_s2 else core-main.e_dummy"
   firstwin_s2:            "folder e_broad_s2_first,tag_add_s2_win,e_stop_music,exit_star"
   e_broad_s2_first:       "command broadcast &6%player% &2got a star: [LLL] Bully the bullies"
   tag_add_s2_win:         "tag add s2"
@@ -205,13 +205,13 @@ events:
   e_obj_del_s2_ksb_3:     "objective remove o_s2_kill_sb_3"
   e_s2_del_tags:          "run ^tag delete s2_sb_1 ^tag delete s2_sb_2 ^tag delete s2_sb_3"
 
-  if_s2_spawned:          "if chk_s2_spawned e_s2_del_spawned else m64-main.e_dummy"
+  if_s2_spawned:          "if chk_s2_spawned e_s2_del_spawned else core-main.e_dummy"
   e_s2_del_spawned:       "folder e_s2_gp_sub_star,if_s2_despawn"
   e_s2_gp_sub_star:       "globalpoint lll_s2 1 action:subtract"
-  if_s2_despawn:          "if !chk_s2_spawn_count e_s2_delete_star else m64-main.e_dummy"
+  if_s2_despawn:          "if !chk_s2_spawn_count e_s2_delete_star else core-main.e_dummy"
   e_s2_tag_del_spawned:   "tag delete s2_spawned"
 
-  if_s2_gotten:           "if !chk_s2_obtained e_s2_attack_player else m64-main.e_dummy"
+  if_s2_gotten:           "if !chk_s2_obtained e_s2_attack_player else core-main.e_dummy"
   e_s2_attack_player:     "command lp user %player% parent remove sb_whitelist"
 
   e_s2_delete_star:       "folder e_s2_despawn_star,e_s2_reset_star_count"
@@ -226,11 +226,11 @@ events:
   e_obj_add_s3_star:      "objective add o_s3_star"
 
   # Win
-  win_s3:                 "folder e_notif_s3_win,m64-sfx.e_got_star,cleanup_s3,if_firstwin_s3"
+  win_s3:                 "folder e_notif_s3_win,core-sfx.e_got_star,cleanup_s3,if_firstwin_s3"
   e_notif_s3_win:         "notify &3Red-hot log rolling\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s3:         "if !chk_s3_obtained firstwin_s3 else m64-main.e_dummy"
+  if_firstwin_s3:         "if !chk_s3_obtained firstwin_s3 else core-main.e_dummy"
   firstwin_s3:            "folder e_broad_s3_first,tag_add_s3_win,e_stop_music,exit_star"
   e_broad_s3_first:       "command broadcast &6%player% &2got a star: [LLL] Red-hot log rolling"
   tag_add_s3_win:         "tag add s3"
@@ -262,71 +262,71 @@ events:
   e_s4_rc_add_point:      "point rc_count 1 action:add"
 
   # Rc1
-  e_s4_got_rc1:           "folder e_s4_add_tag_rc1,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc1,if_all_rc_s4"
+  e_s4_got_rc1:           "folder e_s4_add_tag_rc1,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc1,if_all_rc_s4"
   e_s4_add_tag_rc1:       "tag add rc1"
   e_s4_notify_rc1:        "notify &3Red coin nr. 1 found! %point.rc_count.amount%/12"
   # Rc2
-  e_s4_got_rc2:           "folder e_s4_add_tag_rc2,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc2,if_all_rc_s4"
+  e_s4_got_rc2:           "folder e_s4_add_tag_rc2,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc2,if_all_rc_s4"
   e_s4_add_tag_rc2:       "tag add rc2"
   e_s4_notify_rc2:        "notify &3Red coin nr. 2 found! %point.rc_count.amount%/12"
   # Rc3
-  e_s4_got_rc3:           "folder e_s4_add_tag_rc3,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc3,if_all_rc_s4"
+  e_s4_got_rc3:           "folder e_s4_add_tag_rc3,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc3,if_all_rc_s4"
   e_s4_add_tag_rc3:       "tag add rc3"
   e_s4_notify_rc3:        "notify &3Red coin nr. 3 found! %point.rc_count.amount%/12"
   # Rc4
-  e_s4_got_rc4:           "folder e_s4_add_tag_rc4,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc4,if_all_rc_s4"
+  e_s4_got_rc4:           "folder e_s4_add_tag_rc4,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc4,if_all_rc_s4"
   e_s4_add_tag_rc4:       "tag add rc4"
   e_s4_notify_rc4:        "notify &3Red coin nr. 4 found! %point.rc_count.amount%/12"
   # Rc5
-  e_s4_got_rc5:           "folder e_s4_add_tag_rc5,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc5,if_all_rc_s4"
+  e_s4_got_rc5:           "folder e_s4_add_tag_rc5,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc5,if_all_rc_s4"
   e_s4_add_tag_rc5:       "tag add rc5"
   e_s4_notify_rc5:        "notify &3Red coin nr. 5 found! %point.rc_count.amount%/12"
   # Rc6
-  e_s4_got_rc6:           "folder e_s4_add_tag_rc6,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc6,if_all_rc_s4"
+  e_s4_got_rc6:           "folder e_s4_add_tag_rc6,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc6,if_all_rc_s4"
   e_s4_add_tag_rc6:       "tag add rc6"
   e_s4_notify_rc6:        "notify &3Red coin nr. 6 found! %point.rc_count.amount%/12"
   # Rc7
-  e_s4_got_rc7:           "folder e_s4_add_tag_rc7,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc7,if_all_rc_s4"
+  e_s4_got_rc7:           "folder e_s4_add_tag_rc7,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc7,if_all_rc_s4"
   e_s4_add_tag_rc7:       "tag add rc7"
   e_s4_notify_rc7:        "notify &3Red coin nr. 7 found! %point.rc_count.amount%/12"
   # Rc8
-  e_s4_got_rc8:           "folder e_s4_add_tag_rc8,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc8,if_all_rc_s4"
+  e_s4_got_rc8:           "folder e_s4_add_tag_rc8,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc8,if_all_rc_s4"
   e_s4_add_tag_rc8:       "tag add rc8"
   e_s4_notify_rc8:        "notify &3Red coin nr. 8 found! %point.rc_count.amount%/12"
   # Rc9
-  e_s4_got_rc9:           "folder e_s4_add_tag_rc9,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc9,if_all_rc_s4"
+  e_s4_got_rc9:           "folder e_s4_add_tag_rc9,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc9,if_all_rc_s4"
   e_s4_add_tag_rc9:       "tag add rc9"
   e_s4_notify_rc9:        "notify &3Red coin nr. 9 found! %point.rc_count.amount%/12"
   # Rc10
-  e_s4_got_rc10:          "folder e_s4_add_tag_rc10,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc10,if_all_rc_s4"
+  e_s4_got_rc10:          "folder e_s4_add_tag_rc10,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc10,if_all_rc_s4"
   e_s4_add_tag_rc10:      "tag add rc10"
   e_s4_notify_rc10:       "notify &3Red coin nr. 10 found! %point.rc_count.amount%/12"
   # Rc11
-  e_s4_got_rc11:          "folder e_s4_add_tag_rc11,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc11,if_all_rc_s4"
+  e_s4_got_rc11:          "folder e_s4_add_tag_rc11,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc11,if_all_rc_s4"
   e_s4_add_tag_rc11:      "tag add rc11"
   e_s4_notify_rc11:       "notify &3Red coin nr. 11 found! %point.rc_count.amount%/12"
   # Rc12
-  e_s4_got_rc12:          "folder e_s4_add_tag_rc12,e_s4_rc_add_point,m64-sfx.e_coin,e_s4_notify_rc12,if_all_rc_s4"
+  e_s4_got_rc12:          "folder e_s4_add_tag_rc12,e_s4_rc_add_point,core-sfx.e_coin,e_s4_notify_rc12,if_all_rc_s4"
   e_s4_add_tag_rc12:      "tag add rc12"
   e_s4_notify_rc12:       "notify &3Red coin nr. 12 found! %point.rc_count.amount%/12"
 
   # Check win
-  if_all_rc_s4:           "if chk_s4_all_rc e_s4_all_rc_gotten else m64-main.e_dummy"
+  if_all_rc_s4:           "if chk_s4_all_rc e_s4_all_rc_gotten else core-main.e_dummy"
 
-  e_s4_all_rc_gotten:     "folder e_s4_spawn_star,e_s4_summon_firework,m64-sfx.e_star_spawn,e_s4_notif_spawn_star,e_obj_add_s4_star,e_s4_gp_add_star,e_s4_tag_add_spawned"
+  e_s4_all_rc_gotten:     "folder e_s4_spawn_star,e_s4_summon_firework,core-sfx.e_star_spawn,e_s4_notif_spawn_star,e_obj_add_s4_star,e_s4_gp_add_star,e_s4_tag_add_spawned"
   e_s4_spawn_star:        "setblock RAW_GOLD_BLOCK $s4.star_loc$"
-  e_s4_summon_firework:   "command execute in minecraft:marocraft run summon firework_rocket $s4.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
+  e_s4_summon_firework:   "command execute in minecraft:overworld run summon firework_rocket $s4.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
   e_s4_notif_spawn_star:  "notify &3A star has spawned! io:title"
   e_obj_add_s4_star:      "objective add o_s4_star"
   e_s4_gp_add_star:       "globalpoint lll_s4 1 action:add"
   e_s4_tag_add_spawned:   "tag add s4_spawned"
 
   # Win
-  win_s4:                 "folder e_notif_s4_win,m64-sfx.e_got_star,cleanup_s4,if_firstwin_s4"
+  win_s4:                 "folder e_notif_s4_win,core-sfx.e_got_star,cleanup_s4,if_firstwin_s4"
   e_notif_s4_win:         "notify &312 red coins\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s4:         "if !chk_s4_obtained firstwin_s4 else m64-main.e_dummy"
+  if_firstwin_s4:         "if !chk_s4_obtained firstwin_s4 else core-main.e_dummy"
   firstwin_s4:            "folder e_broad_s4_first,tag_add_s4_win,e_stop_music,exit_star"
   e_broad_s4_first:       "command broadcast &6%player% &2got a star: [LLL] 12 red coins"
   tag_add_s4_win:         "tag add s4"
@@ -355,11 +355,11 @@ events:
   e_s4_del_tags_1:        "run ^tag delete rc1 ^tag delete rc2 ^tag delete rc3 ^tag delete rc4 ^tag delete rc5 ^tag delete rc6"
   e_s4_del_tags_2:        "run ^tag delete rc7 ^tag delete rc8  ^tag delete rc9 ^tag delete rc10 ^tag delete rc11 ^tag delete rc12"
 
-  if_s4_spawned:          "if chk_s4_spawned e_s4_del_spawned else m64-main.e_dummy"
+  if_s4_spawned:          "if chk_s4_spawned e_s4_del_spawned else core-main.e_dummy"
   e_s4_del_spawned:       "folder e_s4_gp_sub_star,if_s4_despawn"
   e_s4_gp_sub_star:       "globalpoint lll_s4 1 action:subtract"
 
-  if_s4_despawn:          "if !chk_s4_spawn_count e_s4_delete_star else m64-main.e_dummy"
+  if_s4_despawn:          "if !chk_s4_spawn_count e_s4_delete_star else core-main.e_dummy"
   e_s4_tag_del_spawned:   "tag delete s4_spawned"
 
   e_s4_delete_star:       "folder e_s4_despawn_star,e_s4_reset_star_count"
@@ -373,11 +373,11 @@ events:
   e_obj_add_s5_star:      "objective add o_s5_star"
 
   # Win
-  win_s5:                 "folder e_notif_s5_win,m64-sfx.e_got_star,cleanup_s5,if_firstwin_s5"
+  win_s5:                 "folder e_notif_s5_win,core-sfx.e_got_star,cleanup_s5,if_firstwin_s5"
   e_notif_s5_win:         "notify &3Hot-foot-it into the volcano\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s5:         "if !chk_s5_obtained firstwin_s5 else m64-main.e_dummy"
+  if_firstwin_s5:         "if !chk_s5_obtained firstwin_s5 else core-main.e_dummy"
   firstwin_s5:            "folder e_broad_s5_first,tag_add_s5_win,e_stop_music,exit_star"
   e_broad_s5_first:       "command broadcast &6%player% &2got a star: [LLL] Hot-foot-it into the volcano"
   tag_add_s5_win:         "tag add s5"
@@ -393,11 +393,11 @@ events:
   e_obj_add_s6_star:      "objective add o_s6_star"
 
   # Win
-  win_s6:                 "folder e_notif_s6_win,m64-sfx.e_got_star,cleanup_s6,if_firstwin_s6"
+  win_s6:                 "folder e_notif_s6_win,core-sfx.e_got_star,cleanup_s6,if_firstwin_s6"
   e_notif_s6_win:         "notify &3Elevator tour in the volcano\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s6:         "if !chk_s6_obtained firstwin_s6 else m64-main.e_dummy"
+  if_firstwin_s6:         "if !chk_s6_obtained firstwin_s6 else core-main.e_dummy"
   firstwin_s6:            "folder e_broad_s6_first,tag_add_s6_win,e_stop_music,exit_star"
   e_broad_s6_first:       "command broadcast &6%player% &2got a star: [LLL] Elevator tour in the volcano"
   tag_add_s6_win:         "tag add s6"
@@ -421,10 +421,10 @@ events:
   fail_s8:                "folder e_notif_s8_fail,reload_s8"
   e_notif_s8_fail:        "notify &3Koopa The Quick\n&4Failed.. io:title"
 
-  e_s8_10_sec_left:       "folder m64-sfx.e_time_almost_up,e_s8_notify_10sec"
+  e_s8_10_sec_left:       "folder core-sfx.e_time_almost_up,e_s8_notify_10sec"
   e_s8_notify_10sec:      "notify &c10 seconds left!"
   # Win
-  win_s8:                 "folder e_notif_s8_win,m64-sfx.e_got_star,e_broad_s8_win,cleanup_s8,if_firstwin_s8"
+  win_s8:                 "folder e_notif_s8_win,core-sfx.e_got_star,e_broad_s8_win,cleanup_s8,if_firstwin_s8"
   e_notif_s8_win:         "notify &3Koopa The Quick\n&2Cleared! io:title"
   e_broad_s8_win:         "command broadcast [&6%player%&r]: LLL Speedrun: %math.calc:($s8.total_time$-objective.o_s8_speedrun.rawSeconds)~3% sec"
 
@@ -446,7 +446,7 @@ events:
 
   ### STAR 9 - CAPTAIN TOAD 1
   # Win
-  win_s9:                 "folder e_notif_s9_win,m64-sfx.e_toad_yahoo,m64-sfx.e_got_star,e_broad_s9_first,tag_add_s9_win,e_stop_music,exit_star"
+  win_s9:                 "folder e_notif_s9_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s9_first,tag_add_s9_win,e_stop_music,exit_star"
   e_notif_s9_win:         "notify &3Lost Toad #1\n&2Cleared! io:title"
   e_broad_s9_first:       "command broadcast &6%player% &2got a star: [LLL] Lwwost Toad #1"
   tag_add_s9_win:         "tag add s9"
@@ -454,7 +454,7 @@ events:
 
   ### STAR 10 - CAPTAIN TOAD 2
   # Win
-  win_s10:                "folder e_notif_s10_win,m64-sfx.e_toad_yahoo,m64-sfx.e_got_star,e_broad_s10_first,tag_add_s10_win,e_door_close_s10,e_stop_music,exit_star"
+  win_s10:                "folder e_notif_s10_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s10_first,tag_add_s10_win,e_door_close_s10,e_stop_music,exit_star"
   e_notif_s10_win:        "notify &3Lost Toad #2\n&2Cleared! io:title"
   e_broad_s10_first:      "command broadcast &6%player% &2got a star: [LLL] Lost Toad #2"
   tag_add_s10_win:        "tag add s10"
@@ -463,7 +463,7 @@ events:
   
   ### STAR 11 - CAPTAIN TOAD 3
   # Win
-  win_s11:                "folder e_notif_s11_win,m64-sfx.e_toad_yahoo,m64-sfx.e_got_star,e_broad_s11_first,tag_add_s11_win,e_door_close_s11,e_stop_music,exit_star"
+  win_s11:                "folder e_notif_s11_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s11_first,tag_add_s11_win,e_door_close_s11,e_stop_music,exit_star"
   e_notif_s11_win:        "notify &3Lost Toad #3\n&2Cleared! io:title"
   e_broad_s11_first:      "command broadcast &6%player% &2got a star: [LLL] Lost Toad #3"
   tag_add_s11_win:        "tag add s11"
