--- a/QuestPackages/m64/sml/stars.yml
+++ b/QuestPackages/m64/sml/stars.yml
@@ -60,7 +60,7 @@ events:
   e_del_star_tags_2:      "run ^tag delete s8 ^tag delete s9 ^tag delete s10 ^tag delete s11"
   e_clear_star_counter:   "point sml_stars 0 action:set"
 
-  exit_star:              "folder on_exit,m64-sfx.e_exit_course,e_add_star_counter delay:4"
+  exit_star:              "folder on_exit,core-sfx.e_exit_course,e_add_star_counter delay:4"
   e_add_star_counter:     "point sml_stars 1 action:add"
 
 
@@ -71,11 +71,11 @@ events:
   e_obj_add_s1_star:      "objective add o_s1_star"
 
   # Win
-  win_s1:                 "folder e_notif_s1_win,m64-sfx.e_got_star,cleanup_s1,if_firstwin_s1"
+  win_s1:                 "folder e_notif_s1_win,core-sfx.e_got_star,cleanup_s1,if_firstwin_s1"
   e_notif_s1_win:         "notify &3Snowman's Big Head\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s1:         "if !chk_s1_obtained firstwin_s1 else m64-main.e_dummy"
+  if_firstwin_s1:         "if !chk_s1_obtained firstwin_s1 else core-main.e_dummy"
   firstwin_s1:            "folder e_broad_s1_first,tag_add_s1_win,e_stop_music,exit_star"
   e_broad_s1_first:       "command broadcast &6%player% &2got a star: [SML] Snowman's Big Head"
   tag_add_s1_win:         "tag add s1"
@@ -108,9 +108,9 @@ events:
   e_s2_push:              "velocity vector:(%randomnumber.decimal.-$s2.push.xz_fr$~$s2.push.xz_to$%;%randomnumber.decimal.$s2.push.y_fr$~$s2.push.y_to$%;%randomnumber.decimal.-$s2.push.xz_fr$~$s2.push.xz_to$%) direction:absolute modification:set"
 
   # Check win
-  e_s2_success:           "folder e_s2_stop,e_s2_spawn_star,e_s2_summon_firework,m64-sfx.e_star_spawn,e_s2_notif_spawn_star,e_obj_add_s2_star,e_s2_gp_add_star,e_s2_tag_add_spawned"
+  e_s2_success:           "folder e_s2_stop,e_s2_spawn_star,e_s2_summon_firework,core-sfx.e_star_spawn,e_s2_notif_spawn_star,e_obj_add_s2_star,e_s2_gp_add_star,e_s2_tag_add_spawned"
   e_s2_spawn_star:        "setblock RAW_GOLD_BLOCK $s2.star_loc$"
-  e_s2_summon_firework:   "command execute in minecraft:marocraft run summon firework_rocket $s2.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
+  e_s2_summon_firework:   "command execute in minecraft:overworld run summon firework_rocket $s2.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
   e_s2_notif_spawn_star:  "notify &3A star has spawned! io:title"
   e_obj_add_s2_star:      "objective add o_s2_star"
   e_s2_gp_add_star:       "globalpoint sml_s2 1 action:add"
@@ -120,11 +120,11 @@ events:
   e_s2_stop:              "folder e_obj_del_s2_enter,e_obj_del_s2_exit,e_obj_del_s2_delay,e_obj_del_s2_surv,e_obj_del_s2_var"
 
   # Win
-  win_s2:                 "folder e_notif_s2_win,m64-sfx.e_got_star,cleanup_s2,if_firstwin_s2"
+  win_s2:                 "folder e_notif_s2_win,core-sfx.e_got_star,cleanup_s2,if_firstwin_s2"
   e_notif_s2_win:         "notify &3Chill with the bully\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s2:         "if !chk_s2_obtained firstwin_s2 else m64-main.e_dummy"
+  if_firstwin_s2:         "if !chk_s2_obtained firstwin_s2 else core-main.e_dummy"
   firstwin_s2:            "folder e_broad_s2_first,tag_add_s2_win,e_stop_music,exit_star"
   e_broad_s2_first:       "command broadcast &6%player% &2got a star: [SML] Chill with the bully"
   tag_add_s2_win:         "tag add s2"
@@ -138,11 +138,11 @@ events:
   e_obj_del_s2_star:      "objective remove o_s2_star"
   e_obj_del_s2_var:       "objective remove o_s2_variable"
 
-  if_s2_spawned:          "if chk_s2_spawned e_s2_del_spawned else m64-main.e_dummy"
+  if_s2_spawned:          "if chk_s2_spawned e_s2_del_spawned else core-main.e_dummy"
   e_s2_del_spawned:       "folder e_s2_gp_sub_star,if_s2_despawn"
   e_s2_gp_sub_star:       "globalpoint sml_s2 1 action:subtract"
 
-  if_s2_despawn:          "if !chk_s2_spawn_count e_s2_delete_star else m64-main.e_dummy"
+  if_s2_despawn:          "if !chk_s2_spawn_count e_s2_delete_star else core-main.e_dummy"
   e_s2_tag_del_spawned:   "tag delete s2_spawned"
 
   e_s2_delete_star:       "folder e_s2_despawn_star,e_s2_reset_star_count"
@@ -156,11 +156,11 @@ events:
   e_obj_add_s3_star:      "objective add o_s3_star"
 
   # Win
-  win_s3:                 "folder e_notif_s3_win,m64-sfx.e_got_star,cleanup_s3,if_firstwin_s3"
+  win_s3:                 "folder e_notif_s3_win,core-sfx.e_got_star,cleanup_s3,if_firstwin_s3"
   e_notif_s3_win:         "notify &3In the deep freeze\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s3:         "if !chk_s3_obtained firstwin_s3 else m64-main.e_dummy"
+  if_firstwin_s3:         "if !chk_s3_obtained firstwin_s3 else core-main.e_dummy"
   firstwin_s3:            "folder e_broad_s3_first,tag_add_s3_win,e_stop_music,exit_star"
   e_broad_s3_first:       "command broadcast &6%player% &2got a star: [SML] In the deep freeze"
   tag_add_s3_win:         "tag add s3"
@@ -176,11 +176,11 @@ events:
   e_obj_add_s4_star:      "objective add o_s4_star"
 
   # Win
-  win_s4:                 "folder e_notif_s4_win,m64-sfx.e_got_star,cleanup_s4,if_firstwin_s4"
+  win_s4:                 "folder e_notif_s4_win,core-sfx.e_got_star,cleanup_s4,if_firstwin_s4"
   e_notif_s4_win:         "notify &3Whirl from the freezing pond\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s4:         "if !chk_s4_obtained firstwin_s4 else m64-main.e_dummy"
+  if_firstwin_s4:         "if !chk_s4_obtained firstwin_s4 else core-main.e_dummy"
   firstwin_s4:            "folder e_broad_s4_first,tag_add_s4_win,e_stop_music,exit_star"
   e_broad_s4_first:       "command broadcast &6%player% &2got a star: [SML] Whirl from the freezing pond"
   tag_add_s4_win:         "tag add s4"
@@ -211,71 +211,71 @@ events:
   e_s5_rc_add_point:      "point rc_count 1 action:add"
 
   # Rc1
-  e_s5_got_rc1:           "folder e_s5_add_tag_rc1,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc1,if_all_rc_s5"
+  e_s5_got_rc1:           "folder e_s5_add_tag_rc1,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc1,if_all_rc_s5"
   e_s5_add_tag_rc1:       "tag add rc1"
   e_s5_notify_rc1:        "notify &3Red coin nr. 1 found! %point.rc_count.amount%/12"
   # Rc2
-  e_s5_got_rc2:           "folder e_s5_add_tag_rc2,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc2,if_all_rc_s5"
+  e_s5_got_rc2:           "folder e_s5_add_tag_rc2,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc2,if_all_rc_s5"
   e_s5_add_tag_rc2:       "tag add rc2"
   e_s5_notify_rc2:        "notify &3Red coin nr. 2 found! %point.rc_count.amount%/12"
   # Rc3
-  e_s5_got_rc3:           "folder e_s5_add_tag_rc3,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc3,if_all_rc_s5"
+  e_s5_got_rc3:           "folder e_s5_add_tag_rc3,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc3,if_all_rc_s5"
   e_s5_add_tag_rc3:       "tag add rc3"
   e_s5_notify_rc3:        "notify &3Red coin nr. 3 found! %point.rc_count.amount%/12"
   # Rc4
-  e_s5_got_rc4:           "folder e_s5_add_tag_rc4,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc4,if_all_rc_s5"
+  e_s5_got_rc4:           "folder e_s5_add_tag_rc4,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc4,if_all_rc_s5"
   e_s5_add_tag_rc4:       "tag add rc4"
   e_s5_notify_rc4:        "notify &3Red coin nr. 4 found! %point.rc_count.amount%/12"
   # Rc5
-  e_s5_got_rc5:           "folder e_s5_add_tag_rc5,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc5,if_all_rc_s5"
+  e_s5_got_rc5:           "folder e_s5_add_tag_rc5,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc5,if_all_rc_s5"
   e_s5_add_tag_rc5:       "tag add rc5"
   e_s5_notify_rc5:        "notify &3Red coin nr. 5 found! %point.rc_count.amount%/12"
   # Rc6
-  e_s5_got_rc6:           "folder e_s5_add_tag_rc6,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc6,if_all_rc_s5"
+  e_s5_got_rc6:           "folder e_s5_add_tag_rc6,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc6,if_all_rc_s5"
   e_s5_add_tag_rc6:       "tag add rc6"
   e_s5_notify_rc6:        "notify &3Red coin nr. 6 found! %point.rc_count.amount%/12"
   # Rc7
-  e_s5_got_rc7:           "folder e_s5_add_tag_rc7,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc7,if_all_rc_s5"
+  e_s5_got_rc7:           "folder e_s5_add_tag_rc7,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc7,if_all_rc_s5"
   e_s5_add_tag_rc7:       "tag add rc7"
   e_s5_notify_rc7:        "notify &3Red coin nr. 7 found! %point.rc_count.amount%/12"
   # Rc8
-  e_s5_got_rc8:           "folder e_s5_add_tag_rc8,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc8,if_all_rc_s5"
+  e_s5_got_rc8:           "folder e_s5_add_tag_rc8,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc8,if_all_rc_s5"
   e_s5_add_tag_rc8:       "tag add rc8"
   e_s5_notify_rc8:        "notify &3Red coin nr. 8 found! %point.rc_count.amount%/12"
   # Rc9
-  e_s5_got_rc9:           "folder e_s5_add_tag_rc9,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc9,if_all_rc_s5"
+  e_s5_got_rc9:           "folder e_s5_add_tag_rc9,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc9,if_all_rc_s5"
   e_s5_add_tag_rc9:       "tag add rc9"
   e_s5_notify_rc9:        "notify &3Red coin nr. 9 found! %point.rc_count.amount%/12"
   # Rc10
-  e_s5_got_rc10:          "folder e_s5_add_tag_rc10,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc10,if_all_rc_s5"
+  e_s5_got_rc10:          "folder e_s5_add_tag_rc10,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc10,if_all_rc_s5"
   e_s5_add_tag_rc10:      "tag add rc10"
   e_s5_notify_rc10:       "notify &3Red coin nr. 10 found! %point.rc_count.amount%/12"
   # Rc11
-  e_s5_got_rc11:          "folder e_s5_add_tag_rc11,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc11,if_all_rc_s5"
+  e_s5_got_rc11:          "folder e_s5_add_tag_rc11,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc11,if_all_rc_s5"
   e_s5_add_tag_rc11:      "tag add rc11"
   e_s5_notify_rc11:       "notify &3Red coin nr. 11 found! %point.rc_count.amount%/12"
   # Rc12
-  e_s5_got_rc12:          "folder e_s5_add_tag_rc12,e_s5_rc_add_point,m64-sfx.e_coin,e_s5_notify_rc12,if_all_rc_s5"
+  e_s5_got_rc12:          "folder e_s5_add_tag_rc12,e_s5_rc_add_point,core-sfx.e_coin,e_s5_notify_rc12,if_all_rc_s5"
   e_s5_add_tag_rc12:      "tag add rc12"
   e_s5_notify_rc12:       "notify &3Red coin nr. 12 found! %point.rc_count.amount%/12"
 
   # Check win
-  if_all_rc_s5:           "if chk_s5_all_rc e_s5_all_rc_gotten else m64-main.e_dummy"
+  if_all_rc_s5:           "if chk_s5_all_rc e_s5_all_rc_gotten else core-main.e_dummy"
 
-  e_s5_all_rc_gotten:     "folder e_s5_spawn_star,e_s5_summon_firework,m64-sfx.e_star_spawn,e_s5_notif_spawn_star,e_obj_add_s5_star,e_s5_gp_add_star,e_s5_tag_add_spawned"
+  e_s5_all_rc_gotten:     "folder e_s5_spawn_star,e_s5_summon_firework,core-sfx.e_star_spawn,e_s5_notif_spawn_star,e_obj_add_s5_star,e_s5_gp_add_star,e_s5_tag_add_spawned"
   e_s5_spawn_star:        "setblock RAW_GOLD_BLOCK $s5.star_loc$"
-  e_s5_summon_firework:   "command execute in minecraft:marocraft run summon firework_rocket $s5.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
+  e_s5_summon_firework:   "command execute in minecraft:overworld run summon firework_rocket $s5.star_loc_xyz$ {LifeTime:10,Motion:[0d,1d,0d],shotAtAngle:1b,FireworksItem:{id:firework_rocket,Count:1,tag:{Fireworks:{Flight:20,Explosions:[{Type:1,Flicker:1b,Colors:[I;14602026]},{Colors:[I;11743532]},{Colors:[I;4312372]}]}}}}"
   e_s5_notif_spawn_star:  "notify &3A star has spawned! io:title"
   e_obj_add_s5_star:      "objective add o_s5_star"
   e_s5_gp_add_star:       "globalpoint sml_s5 1 action:add"
   e_s5_tag_add_spawned:   "tag add s5_spawned"
 
   # Win
-  win_s5:                 "folder e_notif_s5_win,m64-sfx.e_got_star,cleanup_s5,if_firstwin_s5"
+  win_s5:                 "folder e_notif_s5_win,core-sfx.e_got_star,cleanup_s5,if_firstwin_s5"
   e_notif_s5_win:         "notify &3Searchin' for 12 red coins\n&2Cleared! io:title"
 
   # First win
-  if_firstwin_s5:         "if !chk_s5_obtained firstwin_s5 else m64-main.e_dummy"
+  if_firstwin_s5:         "if !chk_s5_obtained firstwin_s5 else core-main.e_dummy"
   firstwin_s5:            "folder e_broad_s5_first,tag_add_s5_win,e_stop_music,exit_star"
   e_broad_s5_first:       "command broadcast &6%player% &2got a star: [SML] Searchin' for 12 red coins"
   tag_add_s5_win:         "tag add s5"
@@ -304,11 +304,11 @@ events:
   e_s5_del_tags_1:        "run ^tag delete rc1 ^tag delete rc2 ^tag delete rc3 ^tag delete rc4 ^tag delete rc5 ^tag delete rc6"
   e_s5_del_tags_2:        "run ^tag delete rc7 ^tag delete rc8  ^tag delete rc9 ^tag delete rc10 ^tag delete rc11 ^tag delete rc12"
 
-  if_s5_spawned:          "if chk_s5_spawned e_s5_del_spawned else m64-main.e_dummy"
+  if_s5_spawned:          "if chk_s5_spawned e_s5_del_spawned else core-main.e_dummy"
   e_s5_del_spawned:       "folder e_s5_gp_sub_star,if_s5_despawn"
   e_s5_gp_sub_star:       "globalpoint sml_s5 1 action:subtract"
 
-  if_s5_despawn:          "if !chk_s5_spawn_count e_s5_delete_star else m64-main.e_dummy"
+  if_s5_despawn:          "if !chk_s5_spawn_count e_s5_delete_star else core-main.e_dummy"
   e_s5_tag_del_spawned:   "tag delete s5_spawned"
 
   e_s5_delete_star:       "folder e_s5_despawn_star,e_s5_reset_star_count"
