--- a/QuestPackages/m64/sslide2/package.yml
+++ b/QuestPackages/m64/sslide2/package.yml
@@ -6,7 +6,7 @@ variables:
 
 events:
   init_level2:        "folder add_level_objs,init_slide,e_tp_spawn,e_play_music"
-  reload_level2:      "folder reset_level2,m64-main.init_castle"
+  reload_level2:      "folder reset_level2,core-main.init_castle"
   reset_level2:       "folder del_level_objs,reset_slide,e_stop_music"
   on_death:           "folder e_notify_death,reload_level2,e_point_add_death,e_gpoint_add_death"
   on_exit:            "folder e_tp_respawn,reload_level2"
@@ -15,8 +15,8 @@ events:
   e_gpoint_add_death: "globalpoint ss2_deaths 1 action:add"
 
   ### Play music
-  e_play_music:       "folder m64-sfx.e_play_secret_slide"
-  e_stop_music:       "folder m64-sfx.e_stop_music"
+  e_play_music:       "folder core-music.e_play_secret_slide"
+  e_stop_music:       "folder core-music.e_stop_music"
 
   ### LEVEL - Add objectives
   add_level_objs:     "folder e_obj_add_respawn,e_obj_add_exit,e_obj_add_exit2"
